--- a/front/src/Components/Navbar/navbar.scss
+++ b/front/src/Components/Navbar/navbar.scss
@@ -25,5 +25,13 @@
             text-decoration: none;
             margin-left: 100px;
         }
+        .signin{
+            background-color: #FC4445;
+            color: white;
+            width: 100px;
+            height: 50px;
+            border-radius: 20px;
+            margin-left: 100px;
+        }
     }
 }
