Last changes to navbar

--- a/front/src/Components/Navbar/navbar.scss
+++ b/front/src/Components/Navbar/navbar.scss
@@ -16,22 +16,31 @@
     }
     .right{
         display: flex;
-        justify-content: center;
+        justify-content: right;
         align-items: center;
         flex-direction: row;
-        flex: 2;
+        flex: 1;
         .link{
             color: white;
             text-decoration: none;
-            margin-left: 100px;
+            margin-right: 100px;
         }
         .signin{
             background-color: #FC4445;
+            border: none;
             color: white;
-            width: 100px;
-            height: 50px;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
             border-radius: 20px;
-            margin-left: 100px;
+            margin-right: 100px;
+            transition: all 1s ease;
+            &:hover{
+                cursor: pointer;
+                background-color: orange;
+            }
         }
     }
 }
