Small navbar edits

--- a/front/src/Components/Auth/auth.scss
+++ b/front/src/Components/Auth/auth.scss
@@ -16,11 +16,13 @@ input{
     height: 15px;
     font-size: 13px;
     display: flex;
+    transition: all 1s ease;
 }
 .form{
     display: flex;
     align-items: center;
     flex-direction: column;
+    transition: all 1s ease;
 }
 .select {
     cursor: pointer;
