--- a/front/src/Components/Editor/editor.scss
+++ b/front/src/Components/Editor/editor.scss
@@ -1,11 +1,31 @@
-.editor{
+.holder{
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    height: 90vh;
-    width: 100vw;
-    .quill{
-        height: 20%;
-        width: 90%;
+    .editor{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90vh;
+        width: 100vw;
+        
+    }
+    .save{
+        background-color: #FC4445;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            border-radius: 20px;
+            margin-top: 10px;
+            transition: all 1s ease;
+            &:hover{
+                cursor: pointer;
+                background-color: orange;
+            }
     }
 }
