Storing in LocalStorage correctly
Some bugs in NavBar

--- a/front/src/Components/Navbar/navbar.scss
+++ b/front/src/Components/Navbar/navbar.scss
@@ -42,5 +42,15 @@
                 background-color: orange;
             }
         }
+        .avatar{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: black;
+            color: white;
+        }
     }
 }
