--- a/front/src/Components/Navbar/navbar.scss
+++ b/front/src/Components/Navbar/navbar.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100vw;
     height: 10vh;
-    background-color: #FC4445;
+    background-color: black;
     flex-direction: row;
     .left{
         display: flex;
@@ -13,6 +13,7 @@
         font-size: 40px;
         color: white;
         margin-left: 50px;
+        font-weight: 900;
     }
     .right{
         display: flex;
@@ -26,7 +27,7 @@
             margin-right: 100px;
         }
         .signin{
-            background-color: #FC4445;
+            background-color: black;
             border: none;
             color: white;
             padding: 100% 30px;
@@ -38,11 +39,11 @@
             transition: all 1s ease;
             &:hover{
                 cursor: pointer;
-                background-color: orange;
+                background-color: #272727;
             }
         }
         .signout{
-            background-color: #FC4445;
+            background-color: black;
             border: none;
             color: white;
             padding: 100% 30px;
@@ -55,7 +56,7 @@
             margin-right: 10px;
             &:hover{
                 cursor: pointer;
-                background-color: orange;
+                background-color: #272727;
             }
         }
         .avatar{
@@ -65,7 +66,7 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background-color: black;
+            background-color: #272727;
             color: white;
             margin-right: 10px;
         }
