--- a/front/src/Components/Editor/editor.css
+++ b/front/src/Components/Editor/editor.css
@@ -78,3 +78,34 @@
     display: flex;
     color: white;
 }
+.boardLink{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+.linkButton{
+    background-color: black;
+    border: none;
+    color: white;
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 0%;
+    margin-top: 20px;
+    margin-left: 20px;
+    transition: all 1s ease;
+}
+.link{
+    margin-top: 20px;
+    margin-left: 10px;
+    display: flex;
+    color: white;
+    transition: all 1s ease;
+}
+.hidden{
+    opacity: 0;
+}
